# Hashcat-Dart

./: .gitmodules  README.md  pubspec.yaml  scripts.dart
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/hashcat/dart/hashcat_dart/: HashcatDartPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/hashcat/dart/hashcat_dart_example/: MainActivity.kt
example/lib/: main.dart
example/test/: widget_test.dart
lib/: command_line_args.dart  generated_hashcat_bindings.dart  hashcat.dart  hashcat_bindings.dart  hashcat_dart.dart  hashcat_dart_method_channel.dart  hashcat_dart_platform_interface.dart
lib/src/: command_line_args.dart  exceptions.dart  generated_hashcat_bindings.dart  hashcat.dart  hashcat_instance.dart
test/: hashcat_dart_method_channel_test.dart  hashcat_dart_test.dart
test_hashcat_plugin/: README.md  pubspec.yaml
test_hashcat_plugin/android/: CMakeLists.txt  build.gradle  settings.gradle
test_hashcat_plugin/android/hashcat/: CMakeLists.txt
test_hashcat_plugin/android/hello_library/: hello.c
test_hashcat_plugin/android/native_add/: CMakeLists.txt  add.c  add.def  add.h
test_hashcat_plugin/android/src/main/: AndroidManifest.xml
test_hashcat_plugin/android/src/main/kotlin/com/example/hashcattestingplugin/test_hashcat_plugin/: TestHashcatPlugin.kt
test_hashcat_plugin/android/test_import/: CMakeLists.txt  add.c
test_hashcat_plugin/android/test_import/native_subtract/: CMakeLists.txt.dont  Makefile  sub.c  sub.def  sub.h
test_hashcat_plugin/example/: README.md  pubspec.yaml
test_hashcat_plugin/example/android/app/: build.gradle
test_hashcat_plugin/example/android/app/src/main/: AndroidManifest.xml
test_hashcat_plugin/example/android/app/src/main/kotlin/com/example/hashcattestingplugin/test_hashcat_plugin_example/: MainActivity.kt
test_hashcat_plugin/example/android/app/src/profile/: AndroidManifest.xml
test_hashcat_plugin/example/lib/: main.dart
test_hashcat_plugin/example/test/: widget_test.dart
test_hashcat_plugin/lib/: test_hashcat_plugin.dart  test_hashcat_plugin_method_channel.dart  test_hashcat_plugin_platform_interface.dart
test_hashcat_plugin/test/: test_hashcat_plugin_method_channel_test.dart  test_hashcat_plugin_test.dart
